# robuchan

./: .env.example  .gitignore  .hfignore  AGENT_MISTAKES.md  CONSIDERING.md  DATASET_SCHEMA.md  GATE_AUDIT.md  HACKATHON_GUIDELINES.md  LAUNCH_RUNBOOK.md  LOG.md  Makefile  PLAN.md  README.md  RESOURCES.md  VIDEO_SCRIPT.md  dataset_card_README.md  model_card_README.md  pyproject.toml  watch_progress.sh
.agents/: settings.local.json
.agents/skills/frontend-design/: SKILL.md
assets/: README.md
data/: audit_dataset.py  plot_response_times.py  prepare.py  suggest_constraints.py  valid_filtered.jsonl
demo/: demo.py  quick_demo.py
demo-video/: package-lock.json  package.json  tsconfig.json
demo-video/src/: RobuchanVideo.tsx  Root.tsx  fonts.ts
demo-video/src/components/: Background.tsx  SceneLabel.tsx
demo-video/src/scenes/: Intro.tsx  (+6 more)
demo/space/: README.md  RUNBOOK.md  app.py  requirements.txt
docs/handoffs/: H0_contract.md  H1_quality_gate.md  H2_job_launch.md  H3_baseline.md  H4_decision.md
eval/: README.md  RESULTS.md  baseline.py  category_aliases.json  compare_hard_cases.py  constraints.json  eval_engine.py  eval_via_space.py  evaluate.py  final150.jsonl  hard_cases.jsonl  quick50.jsonl
ideas/: plan-1.md  plan-2.md  plan-3.md  trl-notes.md
ideas/archive/: README.md
ideas/plan-3/: README.md  recipe-remix.md  robuchan.md  v0.md
kb/: swaps_v0.json
logs/: skill-video-generation.md
scripts/: fill_handoffs.py  prelaunch_check.py  push_to_hf.py  watch_job.py
train/: finetune.py  launch_hf_job.py  preflight.py  train_trl.py  training_log.md
