[project]
name = "robuchan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "kagglehub",
    "marimo",
    "mistralai",
    "pandas",
    "python-dotenv>=1.2.1",
    "rich",
    "huggingface-hub>=0.27",
    "wandb",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "peft>=0.18.1",
    "gradio>=6.8.0",
]
